Add Google Sign-In and custom providers etc.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googledrive-upload",
+  "name": "googledrive-notebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
